# token22-amm-project

./: README.md
frontend-ui/: config-overrides.js  webpack.config.js
frontend-ui/src/: App.tsx
frontend-ui/src/components/: SwapInterface.tsx
frontend-ui/src/utils/: constants.ts  program.ts  token22Utils.ts
token22-swap/: .env  Anchor.toml  Cargo.toml  package-lock.json  package.json  recovery-buffer.json  tsconfig.json
token22-swap/programs/token22-swap/: Cargo.toml
token22-swap/programs/token22-swap/src/: lib.rs
token22-swap/programs/whitelist-hook/: Cargo.toml
token22-swap/programs/whitelist-hook/src/: lib.rs
token22-swap/scripts/: initialize.js
token22-swap/tests/: token22-swap.ts
token22-swap/~/.config/solana/: id.json  id2.json
ui/: package.json
ui/src/: index.tsx
ui/src/components/: PoolManager.tsx  TokenCreator.tsx
