# Root Cargo.toml (in token22-swap directory)
[workspace]
members = [
    "programs/token22-swap",
    "programs/whitelist-hook"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1